# digital_person

./: .env  .gitignore  README.md  app.py  app_factory.py  commands.py  deploy.sh  pyproject.toml
api/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  app_factory.py  pyproject.toml
api/configs/: __init__.py  app_config.py
api/configs/deploy/: __init__.py
api/configs/feature/: __init__.py
api/configs/middleware/: __init__.py
api/configs/packaging/: pyproject.py
api/constants/: __init__.py
api/contexts/: wrapper.py
api/controllers/console/: __init__.py  error.py  setup.py  wraps.py
api/core/graph_apps/: daixie_zonghezheng_app_generator.py  feipang_app_generator.py  gangchangke_app_generator.py  gaoniaosuan_app_generator.py  gaoxueya_app_generator.py  gaoxuezhi_app_generator.py  graph_app_base.py  huxike_app_generator.py  pifuke_app_generator.py  tangniaobing_app_generator.py
api/docker/: entrypoint.sh
api/extensions/: ext_apps_database.py  ext_blueprints.py  ext_celery.py  ext_database.py  ext_login.py  ext_redis.py  ext_storage.py
api/extensions/storage/: base_storage.py  storage_type.py
api/fields/: member_fields.py
api/libs/: external_api.py  file_utils.py  helper.py  login.py  passport.py  token.py
api/migrations/: env.py
api/migrations/versions/: 2025_12_29_1426-4337b7c5065d_initial_migration.py  2025_12_29_1429-74e28e7f162d_account_table_create.py  2025_12_30_1650-62975dce2d2b_change_some_fields.py  2025_12_30_1707-e13bc0e664b1_change_some_fields.py  (+4 more)
api/models/: __init__.py  account.py  base.py  conversation.py  engine.py  image.py  log.py  model.py  models.py  types.py
api/services/: __init__.py  account_service.py  app_generate_service.py  conversation_service.py  llm_service.py  message_service.py  patient_service.py
api/tasks/: llm_run_log_tasks.py
api/tests/: test.http
docker/: .env  (+3 more)
(+130 files in other folders)
