[project]
name = "digital-person"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-restful>=0.3.10",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]
