[project]
name = "digital-person"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-restful>=0.3.10",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=25.9.1",
    "langchain>=1.0.8",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg-pool>=3.2.7",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
]
