[project]
name = "digital_person"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-orjson>=2.0.0",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=25.9.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "minio>=7.2.20",
    "pgvector>=0.4.2",
    "psycopg-binary>=3.3.2",
    "psycopg-pool>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
